# sql-ds-cache

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  README.md  checkstyle.xml  index.html  mkdocs.yml  pom.xml  search.html  sitemap.xml
.github/workflows/: ape_cpp.yaml  ape_java.yaml  dev_cron.yml
.github/workflows/dev_cron/: issues_link.js  title_check.js  title_check.md
1.1.0/: 404.html  index.html  search.html
1.1.0/Advanced-Configuration/: index.html
1.1.0/Architect-Overview/: index.html
1.1.0/Developer-Guide/: index.html
1.1.0/HCFS-User-Guide/: index.html
1.1.0/OAP-Developer-Guide/: index.html
1.1.0/OAP-Installation-Guide/: index.html
1.1.0/User-Guide/: index.html
1.1.0/search/: search_index.json
1.1.1/: 404.html  index.html  search.html
1.1.1/Advanced-Configuration/: index.html
1.1.1/Architect-Overview/: index.html
1.1.1/Developer-Guide/: index.html
1.1.1/HCFS-User-Guide/: index.html
1.1.1/OAP-Developer-Guide/: index.html
1.1.1/OAP-Installation-Guide/: index.html
1.1.1/User-Guide/: index.html
1.1.1/search/: search_index.json
1.2.0/: 404.html  index.html  search.html  sitemap.xml
1.2.0/Advanced-Configuration/: index.html
1.2.0/Architect-Overview/: index.html
1.2.0/Developer-Guide/: index.html
1.2.0/HCFS-User-Guide/: index.html
1.2.0/OAP-Developer-Guide/: index.html
1.2.0/OAP-Installation-Guide/: index.html
1.2.0/User-Guide/: index.html
1.2.0/search/: search_index.json
HCFS-based-cache/: pom.xml
Plasma-based-cache/: pom.xml
Plasma-based-cache/docs/: Advanced-Configuration.md
ci_scripts/: install_APE_dependency.sh  install_arrow.sh  install_pmem_common.sh
dev/: make-distribution.sh  prepare_oap_env.sh
dev/conda-release/: make-conda-release.sh
dev/conda-release/conda-recipes/HPNL/: meta.yaml
dev/conda-release/conda-recipes/intel-arrow/: build.sh  conda_build_config.yaml  meta.yaml
dev/conda-release/conda-recipes/libfabric/: meta.yaml
dev/conda-release/conda-recipes/memkind/: meta.yaml
dev/conda-release/conda-recipes/oap/: build.sh  conda_build_config.yaml  meta.yaml
dev/conda-release/conda-recipes/vmemcache/: meta.yaml
docs/: Advanced-Configuration.md  Conda-Installation-Guide.md  Developer-Guide.md  HCFS-User-Guide.md  OAP-Developer-Guide.md  OAP-Installation-Guide.md  User-Guide.md  index.md
latest/: 404.html  index.html  search.html  sitemap.xml
latest/Advanced-Configuration/: index.html
latest/Architect-Overview/: index.html
latest/Developer-Guide/: index.html
latest/HCFS-User-Guide/: index.html
latest/OAP-Developer-Guide/: index.html
latest/OAP-Installation-Guide/: index.html
latest/User-Guide/: index.html
master/: 404.html  index.html  search.html  sitemap.xml
master/Advanced-Configuration/: index.html
master/Architect-Overview/: index.html
master/Developer-Guide/: index.html
master/HCFS-User-Guide/: index.html
master/OAP-Developer-Guide/: index.html
master/OAP-Installation-Guide/: index.html
master/User-Guide/: index.html
master/search/: search_index.json
oap-ape/: README.md  install.sh
oap-ape/ape-java/: pom.xml
oap-ape/ape-java/ape-benchmarks/: README.md  pom.xml
oap-ape/ape-java/ape-benchmarks/ape-benchmark-flink-tpcds/: pom.xml
oap-ape/ape-java/ape-benchmarks/ape-benchmark-flink-tpcds/tpcds/queries/: query1.sql  query18.sql  query3.sql  query30.sql
oap-ape/ape-java/ape-benchmarks/ape-benchmark-flink-tpch/: pom.xml
oap-ape/ape-java/ape-benchmarks/ape-benchmark-flink-tpch/tpch/modified-queries/: q15.sql
oap-ape/ape-java/ape-benchmarks/ape-benchmark-flink-tpch/tpch/queries/: q1.sql
oap-ape/ape-java/ape-benchmarks/test-scripts/: test_flink_tpcds.sh  test_flink_tpch.sh
oap-ape/ape-java/ape-client/: pom.xml
oap-ape/ape-java/ape-common/: pom.xml
oap-ape/ape-java/ape-flink/: README.md  README_CN.md  dependency-reduced-pom.xml  pom.xml
oap-ape/ape-java/ape-flink/ape-flink-1.12.0/: pom.xml
oap-ape/ape-java/ape-flink/ape-flink-1.12.0/tools/maven/: checkstyle.xml
oap-ape/ape-java/ape-flink/ape-flink-1.13.2/: pom.xml
oap-ape/ape-java/ape-flink/ape-flink-1.13.2/tools/maven/: checkstyle.xml
oap-ape/ape-java/ape-flink/ape-flink-common/: pom.xml
oap-ape/ape-java/ape-hcfs/: pom.xml
oap-ape/ape-java/ape-jni/: pom.xml
oap-ape/ape-java/ape-server/: README.md  pom.xml
oap-ape/ape-java/ape-spark/: pom.xml
oap-ape/ape-java/dev/: checkstyle-suppressions.xml  checkstyle.xml  scalastyle-config.xml
oap-ape/ape-native/: .clang-format  .gitignore  CMakeLists.txt
oap-ape/ape-native/docker/: Dockerfile  install.sh
oap-ape/ape-native/src/: CMakeLists.txt  com_intel_ape_ParquetReaderJNI.cc  com_intel_ape_ParquetReaderJNI.h  compile.sh  main.cc  parquet-hdfs-test.cc  reader.cc  reader.h
oap-ape/ape-native/src/test/: CMakeLists.txt  CMakeLists.txt.in  aggParserTest.cc  apeHashMapTest.cc  convertorTest.cc  decimalTest.cc  parquetHdfsTest.cc  plasmaTest.cc  predicateFilterTest.cc
oap-ape/ape-native/src/utils/: AggExpression.cc  AggExpression.h  ApeDecimal.h  ApeHashMap.h  BinaryOp.h  DecimalConvertor.cc  DecimalConvertor.h  DecimalUtil.cc  DecimalUtil.h  DumpUtils.h  Expression.h  FilterExpression.cc  FilterExpression.h  GroupByUtils.h  JsonConvertor.cc  JsonConvertor.h  PlasmaCacheManager.cc  PlasmaCacheManager.h  PredicateExpression.cc  PredicateExpression.h  QplFilter.cc  QplFilter.h  Type.cc  Type.h  UnaryFilter.cc  UnaryFilter.h  aggParserTest.cc  convertorTest.cc  decimalTest.cc  expression.h  jsonConvertor.cc  jsonConvertor.h  plasmaTest.cc  type.cc  type.h
oap-cache/oap/docs/: Advanced-Configuration.md  User-Guide.md
oap-data-source/arrow/: README.md
oap-edf/: checkstyle-suppressions.xml  checkstyle.xml  pom.xml
oap-fs/pmem-cached-hcfs/: pom.xml
oap-mllib/: README.md
oap-mllib/dev/: install-build-deps-centos.sh
oap-mllib/mllib-dal/: pom.xml
oap-mllib/mllib-dal/src/main/native/: OneDAL.cpp
oap-native-sql/resource/: installation.md
oap-shuffle/RPMem-shuffle/: README.md
oap-shuffle/remote-shuffle/: README.md
oap-spark/: README.md
sbin/: install_plasma_server.sh
(+394 files in other folders)
